Portals: Re-enable PortalBrowserTest.ActivatePortalInShell on Android.

This CL fixes the test flakyness and enables the test on Android.

Bug: 892004
Change-Id: Ibc08897c300ce9704cebf861249b8c7f719cf474
Reviewed-on: https://chromium-review.googlesource.com/c/1313735
Commit-Queue: Lucas Gadani <lfg@chromium.org>
Reviewed-by: AJITH KUMAR V <ajith.v@samsung.com>
Reviewed-by: Pedro Amaral <amaralp@chromium.org>
Reviewed-by: Bo <boliu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#605012}
Former-commit-id: 74c10cd363bb25676d5434ec9bbc40b89dcf27a0